2004-11-17  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: fix ~ in URL recognition regexp.
	* tkchat.tcl: reformat jabber MsgCB to remove redundant code.
	* tkchat.tcl: allow sending to people not in the conference.

2004-11-16  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: add ~ to the URL recognition regexp.
	
2004-11-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Babelfish is now only initialized if the user clicks
	on the Translate selection menu item. 
	Oops. Forgot the context menu.

2004-11-15  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: jabber: logoff now works correctly; colors for ijchain
	users; enabled keep alive for all connection types; prevent sending
	/userinfo; prevent history from loading twice; 

2004-11-15  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Fixed ijchain /me actions.

2004-11-15  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Fixed up ijchain messages in jabber history loading.

2004-11-12  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added nicer display of ijchain messages in jabber mode.

2004-11-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Updated the dict.leo.org translator to work with the
	latest version of the web service, and fixed the key binding to
	invoke it.
	* tkchat.tcl: Changed the visual appearance of /nolog messages to
	be faded to 60%, and in the same font (italic by default) as
	actions.

2004-11-09  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Auto reenter conference and reconnect to server.

2004-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added bug image.

2004-11-08  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Support for nick colors in jabber mode. Fixes timestamp
	bug in MsgCB

2004-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix to permit re-loading the script. Adjustments to
	the show smilies dialog.
	